# mass_mailer

./: Cargo.toml  README.md
scripts/: init_db.sh
src/: .lib.rs.swp  .main.rs.swp  configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: .subscriptions.rs.swp  subscriptions.rs
tests/: health_check.rs
